# IAcomprapisos

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: backend-ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial.py  0002_source_traceability.py  0003_seed_euribor_indicator.py  0004_seed_market_indicators.py
app/: main.py
app/api/: router.py
app/api/routes/: analytics.py  health.py  ingestions.py
app/core/: config.py
app/db/: models.py  session.py
app/ingestion/: base.py  registry.py  service.py
app/ingestion/sources/: bde_euribor.py  ine_common.py  ine_house_prices.py  ine_mortgages.py  ine_transmissions.py  mivau_appraisal.py  mivau_rent.py  mivau_tabular.py
app/schemas/: ingestion.py
architecture/: 01-vision-and-scope.md  02-data-architecture.md  03-ingestion-design.md  04-development-roadmap.md  05-api-and-web-target.md  incremental-and-consumption.md
architecture/data-sources/: bde-euribor.md  ine-transmissions.md  remaining-market-sources.md
tests/: test_bde_euribor.py  test_health.py  test_ine_transmissions.py  test_ingestion_incremental.py  test_market_sources.py
